fix: wrong links displayed in emails sent to user

--- a/assets/emailChange.html
+++ b/assets/emailChange.html
@@ -31,7 +31,7 @@
   
     <p>Hey there! We're sending you this email so that you can change your account's email.</p>
     <p>All you have to do now, is follow this URL link and set a new email.</p>
-    <a href="https://connect.upframe.io/changemyemail?token=RESETURL">https://connect.upframe.io/changemyemail?=token=RESETURL</a>
+    <a href="https://connect.upframe.io/changemyemail?token=RESETURL">https://connect.upframe.io/changemyemail?token=RESETURL</a>
     <p>If you didn't request this email, just ignore it as nobody other than you will read this message.</p>
     
     <p>
