--- a/assets/resetPassword.html
+++ b/assets/resetPassword.html
@@ -31,7 +31,7 @@
   
     <p>Hey there! We're sending you this email so that you can recover access to your account.</p>
     <p>All you have to do now, is follow this URL link and set a new password.</p>
-    <a href="https://connect.upframe.io/resetmypassword?token=RESETURL">https://connect.upframe.io/RESETURL</a>
+    <a href="https://connect.upframe.io/resetmypassword?token=RESETURL">https://connect.upframe.io/resetmypassword?token=RESETURL</a>
     <p>If you didn't request this email, just ignore it as nobody other than you will read this message.</p>
     
     <p>
