feat: change meetup confirmation URL

--- a/assets/meetupInvitation.html
+++ b/assets/meetupInvitation.html
@@ -31,9 +31,9 @@
   
     <p>Hey there! We're sending you this email because USER invited you a meetup in LOCATION at TIME.</p>
     <p>All you have to do now, is confirm the meetup if you want it to make it happen by clicking the URL link below.</p>
-    <a href="https://connect.upframe.io/confirm?meetup=MID">https://connect.upframe.io/confirm?meetup=MID</a>
+    <a href="https://connect.upframe.io/meetup?confirm=MID">https://connect.upframe.io/confirm?meetup=MID</a>
     <p>If you are unavailable for this meetup, please cancel it by clicking the URL link below.</p>
-    <a href="https://connect.upframe.io/refuse?meetup=MID">https://connect.upframe.io/refuse?meetup=MID</a>
+    <a href="https://connect.upframe.io/meetup?refuse=MID">https://connect.upframe.io/refuse?meetup=MID</a>
     
     <p>
       Thanks for being part of Connect, <br>
